header style changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
     NYC Tri-State Area
   </h3>
 
-  <h4>Web Applications | Distributed Systems | Cloud Native</h4>
+  <h4>
+    <ul>
+      <li>Web Applications</li>
+      <li>Distributed Systems</li>
+      <li>Cloud Native</li>
+    </ul>
+  </h4>
 
   <article>
     <h3>⊣ Portals ⊢</h3>
@@ -41,14 +47,14 @@
   <article>
     <h3>⊣ Work, experience... ⊢</h3>
     <p>Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
-    Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
-    Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
-    CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-    </br>and more ˌˌˌ</p>
+      Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
+      Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
+      CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
+      </br>and more ˌˌˌ</p>
   </article>
-  
+
   <p>˚∆˚</p>
-  
+
   <footer>
     <div class='foot'></div>
     <div class='foot'></div>
