--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
   <h4>
     <ul>
       <li>Web Applications</li>
-      <li>Distributed Systems</li>
+      <li>Blockchain</li>
       <li>Cloud Native</li>
     </ul>
   </h4>
 
   <article>
-    <h3>⊣ Portals ⊢</h3>
+    <h3><li>Portals</li></h3>
     <a href="http://github.com/srdjan">@github</a>&emsp;
     <a href="https://www.linkedin.com/in/srdjanstrbanovic/">@linkedin</a>&emsp;
     <a href="https://twitter.com/djidja8">@twitter</a>
   </article>
 
   <article>
-    <h3>⊣ Work, experience... ⊢</h3>
+    <h3><li> Work experience</li></h3>
     <p>Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
@@ -53,7 +53,7 @@
       </br>and more ˌˌˌ</p>
   </article>
 
-  <p>˚∆˚</p>
+  <p>⊣˚∆˚⊢</p>
 
   <footer>
     <div class='foot'></div>
