--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
 
   <h3>Sdjan Strbanovic</br>
-    Software Engineer, Builder</br>
+    Software Engineer</br>
     NYC Tri-State Area
   </h3>
 
@@ -50,7 +50,7 @@
       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
       CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-      </br>and more ˌˌˌ</p>
+      </br>and more ...</p>
   </article>
 
   <p>⊣˚∆˚⊢</p>
