--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
   <article>
     <h3><li> Work experience</li></h3>
-    <p>Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
+    <p>SVP Architecture&emsp;<a href="https://fadv.com">@First Adventage</a><br />
+      Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
       CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
