--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <article>
     <h3><li>Portals</li></h3>
-    <a href="http://github.com/srdjan">@github</a>&emsp;
+    <a href="https://github.com/srdjan">@github</a>&emsp;
     <a href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
     <a href="https://twitter.com/djidja8">@twitter</a>
   </article>
