added missing.css made animation last longer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta content="utf-8" http-equiv="encoding" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="module" src="./header.js"></script>
+  <link rel="stylesheet" href="https://the.missing.style">
   <link href="./style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -51,10 +52,8 @@
       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
       CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-      </br>and more ...</p>
+      ...</br></br>⊣˚∆˚⊢</p>
   </article>
-
-  <p>⊣˚∆˚⊢</p>
   
 </body>
 
