--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
       CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-      ...</br></br>⊣˚∆˚⊢</p>
+      ...</p>
   </article>
-  
+  <footer>⊣˚∆˚⊢</footer>
 </body>
 
 </html>
