added css var for green

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <div class='head'></div>
   </nav>
 
+  <header>
   <h3>Sdjan Strbanovic</br>
     Software Engineer</br>
     NYC Tri-State Area
   </h3>
-
   <h4>
     <ul>
       <li>Web Applications</li>
@@ -37,23 +37,24 @@
       <li>Cloud Native</li>
     </ul>
   </h4>
+  </header>
 
-  <article>
+  <section>
     <h3><li>Portals</li></h3>
     <a href="https://github.com/srdjan">@github</a>&emsp;
     <a href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
     <a href="https://twitter.com/djidja8">@twitter</a>
-  </article>
-
-  <article>
-    <h3><li> Work experience</li></h3>
+  </section>
+  <section>
+    <h3><li>Work experience</li></h3>
     <p>SVP Architecture&emsp;<a href="https://fadv.com">@First Adventage</a><br />
       Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
       CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-      ...</p>
-  </article>
+      ...
+    </p>
+  </section>
   <footer>⊣˚∆˚⊢</footer>
 </body>
 
