--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       ...
     </p>
   </section>
-  <footer>⊣˚∆˚⊢</footer>
+  <footer><span class="blink">⊣˚∆˚⊢</span></footer>
 </body>
 
 </html>
