--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta content="utf-8" http-equiv="encoding" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="module" src="./header.js"></script>
-  <link rel="stylesheet" href="https://the.missing.style">
-  <link href="./style.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://the.missing.style/v1.0.1/missing.min.css">
+  <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 
 <body>
