spelling and new top header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <span class="blink">⊣˚∆˚⊢</span>
+
   <nav>
     <div class='head'></div>
     <div class='head'></div>
@@ -26,7 +28,7 @@
   </nav>
 
   <header>
-  <h3>Sdjan Strbanovic</br>
+  <h3>Srdjan Strbanovic</br>
     Software Engineer</br>
     NYC Tri-State Area
   </h3>
@@ -55,7 +57,7 @@
       ...
     </p>
   </section>
-  <footer><span class="blink">⊣˚∆˚⊢</span></footer>
+  <footer>⊣⊢</footer>
 </body>
 
 </html>
