fixed header animation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
   <meta content="utf-8" http-equiv="encoding" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="module" src="./header.js"></script>
   <link rel="stylesheet" href="https://the.missing.style/v1.0.1/missing.min.css">
   <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
@@ -28,17 +27,17 @@
   </nav>
 
   <header>
-  <h3>Srdjan Strbanovic</br>
-    Software Engineer</br>
-    NYC Tri-State Area
-  </h3>
-  <h4>
-    <ul>
-      <li>Web Applications</li>
-      <li>Blockchain</li>
-      <li>Cloud Native</li>
-    </ul>
-  </h4>
+    <h3>Srdjan Strbanovic</br>
+      Software Engineer</br>
+      NYC Tri-State Area
+    </h3>
+    <h4>
+      <ul>
+        <li>Web Applications</li>
+        <li>Blockchain</li>
+        <li>Cloud Native</li>
+      </ul>
+    </h4>
   </header>
 
   <section>
@@ -49,7 +48,7 @@
   </section>
   <section>
     <h3><li>Work experience</li></h3>
-    <p>SVP Architecture&emsp;<a href="https://fadv.com">@First Adventage</a><br />
+    <p>SVP Architecture&emsp;<a href="https://fadv.com">@First Advantage</a><br />
       Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
       Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
       Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
@@ -58,6 +57,8 @@
     </p>
   </section>
   <footer>⊣⊢</footer>
+
+  <script type="module" src="./header.js"></script>
 </body>
 
 </html>
