--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
   <meta content="utf-8" http-equiv="encoding" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="https://the.missing.style/v1.0.1/missing.min.css"> -->
   <link rel="stylesheet" href="./style.css" type="text/css">
 </head>
 
 <body>
   <span class="blink">⊣˚∆˚⊢</span>
-
   <nav>
     <div class='head'></div>
     <div class='head'></div>
@@ -23,23 +21,21 @@
     <div class='head'></div>
     <div class='head'></div>
     <div class='head'></div>
-    <div class='head'></div>
   </nav>
-
-  <header>
+  <h3>
+    <ul>
+      <li>Web Applications</li>
+      <li>Blockchain</li>
+      <li>Cloud Native</li>
+    </ul>
+  </h3>
+  
+  <section>
     <h3>Srdjan Strbanovic</br>
       Software Engineer</br>
       NYC Tri-State Area
     </h3>
-    <h4>
-      <ul>
-        <li>Web Applications</li>
-        <li>Blockchain</li>
-        <li>Cloud Native</li>
-      </ul>
-    </h4>
-  </header>
-
+  </section>
   <section>
     <h3><li>Portals</li></h3>
     <a href="https://github.com/srdjan">@github</a>&emsp;
