--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@
     </h3>
   </section>
   <section>
-    <h4><li>Portals</li></h4>
+    <h4>Portals</h4>
     <a href="https://github.com/srdjan">@github</a>&emsp;
     <a href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
     <a href="https://twitter.com/djidja8">@twitter</a>
   </section>
   <section>
-    <h4><li>Work experience</li></h4>
-    <p>SVP Architecture&emsp;<a href="https://fadv.com">@First Advantage</a><br />
-      Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a><br />
-      Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a><br />
-      Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a><br />
-      CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a><br />
-      ...
-    </p>
+    <h4>Work experience</h4>
+    <ul class="inside">
+      <li>SVP Architecture&emsp;<a href="https://fadv.com">@First Advantage</a></li>
+      <li>Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a></li>
+      <li>Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a></li>
+      <li>Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
+      <li>CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a></li>
+      <li>...</li>
+    </ul>
   </section>
   <footer>⊣⊢</footer>
 
