removed 'skils' for now

--- a/index.html
+++ b/index.html
@@ -22,20 +22,13 @@
     <div class='head'></div>
     <div class='head'></div>
   </nav>
-  <h4>
-    <ul>
-      <li>Web Applications</li>
-      <li>Blockchain</li>
-      <li>Cloud Native</li>
-    </ul>
-  </h4>
   
-  <section>
+  <article>
     <h3>Srdjan Strbanovic</br>
       Software Engineer</br>
       NYC Tri-State Area
     </h3>
-  </section>
+  </article>
   <section>
     <h4>Portals</h4>
     <a href="https://github.com/srdjan">@github</a>&emsp;
