formatted work history to two columns

--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
   <section>
     <h4>Work experience</h4>
     <ul class="inside">
-      <li>SVP Architecture&emsp;<a href="https://fadv.com">@First Advantage</a></li>
-      <li>Co-Founder & CTO&emsp;<a href="https://klinchit.app">@KlinchIt.app</a></li>
-      <li>Chief Architect&emsp;<a href="https://lifion.com/">@Lifion by ADP</a></li>
-      <li>Principal Architect&emsp;<a href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
-      <li>CTO&emsp;<a href="https://www.cignium.com/">@Cignium</a></li>
-      <li>...</li>
+      <li>SVP Architecture</li>
+      <li>Co-Founder & CTO</li>
+      <li>Chief Architect</li>
+      <li>Principal Architect</li>
+      <li>Chief Technology Officer</li>
+      <li><a href="https://fadv.com">@First Advantage</a></li>
+      <li><a href="https://klinchit.app">@KlinchIt.app</a></li>
+      <li><a href="https://lifion.com/">@Lifion by ADP</a></li>
+      <li><a href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
+      <li><a href="https://www.cignium.com/">@Cignium</a></li>
     </ul>
   </section>
   <footer>⊣⊢</footer>
