new link animations

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   </article>
   <section>
     <h4>Portals</h4>
-    <a href="https://github.com/srdjan">@github</a>&emsp;
-    <a href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
-    <a href="https://twitter.com/djidja8">@twitter</a>
+    <a class="btn" href="https://github.com/srdjan">@github</a>&emsp;
+    <a class="btn" href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
+    <a class="btn" href="https://twitter.com/djidja8">@twitter</a>
   </section>
   <section>
     <h4>Work experience</h4>
@@ -43,11 +43,11 @@
       <li>Chief Architect</li>
       <li>Principal Architect</li>
       <li>Chief Technology Officer</li>
-      <li><a href="https://fadv.com">@First Advantage</a></li>
-      <li><a href="https://klinchit.app">@KlinchIt.app</a></li>
-      <li><a href="https://lifion.com/">@Lifion by ADP</a></li>
-      <li><a href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
-      <li><a href="https://www.cignium.com/">@Cignium</a></li>
+      <li><a class="btn" href="https://fadv.com">@First Advantage</a></li>
+      <li><a class="btn" href="https://klinchit.app">@KlinchIt.app</a></li>
+      <li><a class="btn" href="https://lifion.com/">@Lifion by ADP</a></li>
+      <li><a class="btn" href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
+      <li><a class="btn" href="https://www.cignium.com/">@Cignium</a></li>
     </ul>
   </section>
   <footer>⊣⊢</footer>
