--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <span class="blink">⊣˚∆˚⊢</span>
+  <span class="avatar">⊣˚∆˚⊢</span>
   <nav>
     <div class='head'></div>
     <div class='head'></div>
@@ -24,16 +24,16 @@
   </nav>
   
   <article>
-    <h3>Srdjan Strbanovic</br>
+    <h3><span class="link">Srdjan Strbanovic</span></br>
       Software Engineer</br>
       NYC Tri-State Area
     </h3>
   </article>
   <section>
     <h4>Portals</h4>
-    <a class="btn" href="https://github.com/srdjan">@github</a>&emsp;
-    <a class="btn" href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
-    <a class="btn" href="https://twitter.com/djidja8">@twitter</a>
+    <a class="link" href="https://github.com/srdjan">@github</a>&emsp;
+    <a class="link" href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
+    <a class="link" href="https://twitter.com/djidja8">@twitter</a>
   </section>
   <section>
     <h4>Work experience</h4>
@@ -43,11 +43,11 @@
       <li>Chief Architect</li>
       <li>Principal Architect</li>
       <li>Chief Technology Officer</li>
-      <li><a class="btn" href="https://fadv.com">@First Advantage</a></li>
-      <li><a class="btn" href="https://klinchit.app">@KlinchIt.app</a></li>
-      <li><a class="btn" href="https://lifion.com/">@Lifion by ADP</a></li>
-      <li><a class="btn" href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
-      <li><a class="btn" href="https://www.cignium.com/">@Cignium</a></li>
+      <li><a class="link" href="https://fadv.com">@First Advantage</a></li>
+      <li><a class="link" href="https://klinchit.app">@KlinchIt.app</a></li>
+      <li><a class="link" href="https://lifion.com/">@Lifion by ADP</a></li>
+      <li><a class="link" href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
+      <li><a class="link" href="https://www.cignium.com/">@Cignium</a></li>
     </ul>
   </section>
   <footer>⊣⊢</footer>
