started on dropping biz card on touch/hover

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   </article>
   <section>
     <h4>Portals</h4>
-    <a class="link" href="https://github.com/srdjan">@github</a>&emsp;
-    <a class="link" href="https://www.linkedin.com/in/ssrdjan/">@linkedin</a>&emsp;
-    <a class="link" href="https://twitter.com/djidja8">@twitter</a>
+    <a class="link" href="https://github.com/srdjan">@GitHub</a>&emsp;
+    <a class="link" href="https://www.linkedin.com/in/ssrdjan/">@LinkedIn</a>&emsp;
+    <a class="link" href="https://twitter.com/djidja8">@Twitter</a>
   </section>
   <section>
     <h4>Work experience</h4>
