--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <div class='head'></div>
     <div class='head'></div>
   </nav>
-  
+
   <article>
-    <h3><span class="link">Srdjan Strbanovic</span></br>
+    <h3>
+      <span class="link">Srdjan Strbanovic</span></br>
       Software Engineer</br>
       NYC Tri-State Area
     </h3>
