--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li>Co-Founder & CTO</li>
       <li>Chief Architect</li>
       <li>Principal Architect</li>
-      <li>Chief Technology Officer</li>
+      <li>CTO</li>
       <li><a class="link" href="https://fadv.com">@First Advantage</a></li>
       <li><a class="link" href="https://klinchit.app">@KlinchIt.app</a></li>
       <li><a class="link" href="https://lifion.com/">@Lifion by ADP</a></li>
