--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h4>Work experience</h4>
     <ul class="inside">
       <li>SVP Architecture</li>
-      <li>Co-Founder & CTO</li>
+      <li>Co-Founder/CTO</li>
       <li>Chief Architect</li>
       <li>Principal Architect</li>
       <li>CTO</li>
