sepaarted name from the occupation, location

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   </nav>
 
   <article>
-    <h3>
+    <h2>
       <span class="link">Srdjan Strbanovic</span></br>
-      Software Engineer</br>
-      NYC Tri-State Area
-    </h3>
+      <h4>Software Engineer</br>
+      NYC Tri-State Area</h4>
+    </h2>
   </article>
   <section>
     <h4>Portals</h4>
