--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
   <meta content="utf-8" http-equiv="encoding" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./style.css" type="text/css">
+  <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 
 <body>
