removed class 'link' from the name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <article>
     <h2>
-      <span class="link">Srdjan Strbanovic</span></br>
+      <span>Srdjan Strbanovic</span></br>
       <h4>Software Engineer</br>
       NYC Tri-State Area</h4>
     </h2>
