--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Personal Github page: Srdjan Strbanovic</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-  <meta content="utf-8" http-equiv="encoding" />
+  <!-- <meta content="utf-8" http-equiv="encoding" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
@@ -24,11 +24,9 @@
   </nav>
 
   <article>
-    <h2>
-      <span>Srdjan Strbanovic</span></br>
-      <h4>Software Engineer</br>
+    <h2>Srdjan Strbanovic</h2><br>
+    <h4>Software Engineer<br>
       NYC Tri-State Area</h4>
-    </h2>
   </article>
   <section>
     <h4>Portals</h4>
