--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h4>Portals</h4>
     <a class="link" href="https://github.com/srdjan">@GitHub</a>&emsp;
     <a class="link" href="https://www.linkedin.com/in/ssrdjan/">@LinkedIn</a>&emsp;
-    <a class="link" href="https://twitter.com/djidja8">@Twitter</a>
+    <a class="link" href="https://x.com/djidja8">@Twitter</a>
   </section>
   <section>
     <h4>Work experience</h4>
