removed extra new line

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </nav>
 
   <article>
-    <h2>Srdjan Strbanovic</h2><br>
+    <h2>Srdjan Strbanovic</h2>
     <h4>Software Engineer<br>
       NYC Tri-State Area</h4>
   </article>
