--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <a class="link" href="https://github.com/srdjan">@GitHub</a>&emsp;
     <a class="link" href="https://www.linkedin.com/in/ssrdjan/">@LinkedIn</a>&emsp;
     <a class="link" href="https://x.com/djidja8">@Twitter</a>
+    <a class="link" href="https://blogo.timek.deno.net">@MyBlog</a>
   </section>
   <section>
     <h4>Work experience</h4>
