--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <article>
     <h2>Srdjan Strbanovic</h2>
-    <h4>Software Engineer<br>
+    <h4>Transformational Technology Leader<br>
       NYC Tri-State Area</h4>
   </article>
   <section>
