--- a/index.html
+++ b/index.html
@@ -2,54 +2,85 @@
 <html lang="en">
 
 <head>
-  <title>Personal Github page: Srdjan Strbanovic</title>
+  <title>Srdjan Strbanovic - Transformational Technology Leader</title>
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
-  <!-- <meta content="utf-8" http-equiv="encoding" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Srdjan Strbanovic - Transformational Technology Leader and Software Engineer in NYC Tri-State Area. SVP Architecture, Co-Founder/CTO with experience at First Advantage, Lifion by ADP, ThoughtWorks.">
+  <meta name="keywords" content="Software Engineer, Technology Leader, Architect, NYC, CTO, SVP Architecture">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./styles.css" type="text/css">
+  
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="Srdjan Strbanovic - Transformational Technology Leader">
+  <meta property="og:description" content="Software Engineer and Technology Leader in NYC Tri-State Area">
+  <meta property="og:url" content="https://srdjan.github.io/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary">
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Srdjan Strbanovic",
+    "jobTitle": "Transformational Technology Leader",
+    "url": "https://srdjan.github.io/",
+    "sameAs": [
+      "https://github.com/srdjan",
+      "https://www.linkedin.com/in/ssrdjan/",
+      "https://x.com/djidja8",
+      "https://blogo.timek.deno.net"
+    ]
+  }
+  </script>
 </head>
 
 <body>
-  <span class="avatar">⊣˚∆˚⊢</span>
-  <nav>
-    <div class='head'></div>
-    <div class='head'></div>
-    <div class='head'></div>
-    <div class='head'></div>
-    <div class='head'></div>
-    <div class='head'></div>
-    <div class='head'></div>
-    <div class='head'></div>
-    <div class='head'></div>
-  </nav>
+  <a href="#main-content" class="skip-link">Skip to main content</a>
+  <header>
+    <span class="avatar" role="img" aria-label="Decorative avatar symbol">⊣˚∆˚⊢</span>
+    <nav aria-label="Decorative header animation">
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+      <div class='head' aria-hidden="true"></div>
+    </nav>
+  </header>
 
-  <article>
-    <h2>Srdjan Strbanovic</h2>
-    <h4>Transformational Technology Leader<br>
-      NYC Tri-State Area</h4>
-  </article>
-  <section>
-    <h4>Portals</h4>
-    <a class="link" href="https://github.com/srdjan">@GitHub</a>&emsp;
-    <a class="link" href="https://www.linkedin.com/in/ssrdjan/">@LinkedIn</a>&emsp;
-    <a class="link" href="https://x.com/djidja8">@Twitter</a>
-    <a class="link" href="https://blogo.timek.deno.net">@MyBlog</a>
-  </section>
-  <section>
-    <h4>Work experience</h4>
+  <main id="main-content">
+    <section class="hero">
+      <h2>Srdjan Strbanovic</h2>
+      <h4>Transformational Technology Leader<br>
+        NYC Tri-State Area</h4>
+    </section>
+    <section>
+      <h4>Portals</h4>
+      <a class="link" href="https://github.com/srdjan" target="_blank" rel="noopener noreferrer">@GitHub</a>&emsp;
+      <a class="link" href="https://www.linkedin.com/in/ssrdjan/" target="_blank" rel="noopener noreferrer">@LinkedIn</a>&emsp;
+      <a class="link" href="https://x.com/djidja8" target="_blank" rel="noopener noreferrer">@Twitter</a>
+      <a class="link" href="https://blogo.timok.deno.net" target="_blank" rel="noopener noreferrer">@MyBlog</a>
+    </section>
+    <section>
+      <h4>Work experience</h4>
     <ul class="inside">
       <li>SVP Architecture</li>
       <li>Co-Founder/CTO</li>
       <li>Chief Architect</li>
       <li>Principal Architect</li>
       <li>CTO</li>
-      <li><a class="link" href="https://fadv.com">@First Advantage</a></li>
-      <li><a class="link" href="https://klinchit.app">@KlinchIt.app</a></li>
-      <li><a class="link" href="https://lifion.com/">@Lifion by ADP</a></li>
-      <li><a class="link" href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
-      <li><a class="link" href="https://www.cignium.com/">@Cignium</a></li>
+      <li><a class="link" href="https://fadv.com" target="_blank" rel="noopener noreferrer">@First Advantage</a></li>
+      <li><a class="link" href="https://klinchit.app" target="_blank" rel="noopener noreferrer">@KlinchIt.app</a></li>
+      <li><a class="link" href="https://lifion.com/" target="_blank" rel="noopener noreferrer">@Lifion by ADP</a></li>
+      <li><a class="link" href="https://www.thoughtworks.com/" target="_blank" rel="noopener noreferrer">@ThoughtWorks</a></li>
+      <li><a class="link" href="https://www.cignium.com/" target="_blank" rel="noopener noreferrer">@Cignium</a></li>
     </ul>
-  </section>
+    </section>
+  </main>
   <footer>⊣⊢</footer>
 
   <script type="module" src="./header.js"></script>
