updates all around :)

--- a/index.html
+++ b/index.html
@@ -53,32 +53,32 @@
   </header>
 
   <main id="main-content">
-    <section class="hero">
+    <section>
       <h2>Srdjan Strbanovic</h2>
-      <h4>Transformational Technology Leader<br>
-        NYC Tri-State Area</h4>
+      <h6>Transformational Technology Leader<h6>
+      <p>NYC Tri-State Area</p>
     </section>
     <section>
-      <h4>Portals</h4>
-      <a class="link" href="https://github.com/srdjan" target="_blank" rel="noopener noreferrer">@GitHub</a>&emsp;
-      <a class="link" href="https://www.linkedin.com/in/ssrdjan/" target="_blank" rel="noopener noreferrer">@LinkedIn</a>&emsp;
-      <a class="link" href="https://x.com/djidja8" target="_blank" rel="noopener noreferrer">@Twitter</a>
-      <a class="link" href="https://blogo.timok.deno.net" target="_blank" rel="noopener noreferrer">@MyBlog</a>
+      <p><sup>___</sup></p>
+      <ul>
+        <li>SVP Architecture</li>
+        <li>Co-Founder/CTO</li>
+        <li>Chief Architect</li>
+        <li>Principal Architect</li>
+        <li>CTO</li>
+        <li><a class="link" href="https://fadv.com" target="_blank" rel="noopener noreferrer">@First Advantage</a></li>
+        <li><a class="link" href="https://klinchit.app" target="_blank" rel="noopener noreferrer">@KlinchIt.app</a></li>
+        <li><a class="link" href="https://lifion.com/" target="_blank" rel="noopener noreferrer">@Lifion by ADP</a></li>
+        <li><a class="link" href="https://www.thoughtworks.com/" target="_blank" rel="noopener noreferrer">@ThoughtWorks</a></li>
+        <li><a class="link" href="https://www.cignium.com/" target="_blank" rel="noopener noreferrer">@Cignium</a></li>
+      </ul>
     </section>
     <section>
-      <h4>Work experience</h4>
-    <ul class="inside">
-      <li>SVP Architecture</li>
-      <li>Co-Founder/CTO</li>
-      <li>Chief Architect</li>
-      <li>Principal Architect</li>
-      <li>CTO</li>
-      <li><a class="link" href="https://fadv.com" target="_blank" rel="noopener noreferrer">@First Advantage</a></li>
-      <li><a class="link" href="https://klinchit.app" target="_blank" rel="noopener noreferrer">@KlinchIt.app</a></li>
-      <li><a class="link" href="https://lifion.com/" target="_blank" rel="noopener noreferrer">@Lifion by ADP</a></li>
-      <li><a class="link" href="https://www.thoughtworks.com/" target="_blank" rel="noopener noreferrer">@ThoughtWorks</a></li>
-      <li><a class="link" href="https://www.cignium.com/" target="_blank" rel="noopener noreferrer">@Cignium</a></li>
-    </ul>
+      <p><sup>___</sup></p>
+      <a class="link" href="https://github.com/srdjan" target="_blank" rel="noopener noreferrer"> @GitHub</a>
+      <a class="link" href="https://www.linkedin.com/in/ssrdjan/" target="_blank" rel="noopener noreferrer"> @LinkedIn</a>
+      <a class="link" href="https://x.com/djidja8" target="_blank" rel="noopener noreferrer"> @Twitter</a>
+      <a class="link" href="https://blogo.timok.deno.net" target="_blank" rel="noopener noreferrer"> @MyBlog</a>
     </section>
   </main>
   <footer>⊣⊢</footer>
