fix header animation

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <header>
     <span class="avatar" role="img" aria-label="Decorative avatar symbol">⊣˚∆˚⊢</span>
-    <nav aria-label="Decorative header animation">
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
-      <div class='head' aria-hidden="true"></div>
+    <nav>
+      <div class='head'></div>
+      <div class='head'></div>
+      <div class='head'></div>
+      <div class='head'></div>
+      <div class='head'></div>
+      <div class='head'></div>
+      <div class='head'></div>
+      <div class='head'></div>
+      <div class='head'></div>
     </nav>
   </header>
 
