--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 </head>
 
 <body>
-  <a href="#main-content" class="skip-link">Skip to main content</a>
   <header>
     <span class="avatar" role="img" aria-label="Decorative avatar symbol">⊣˚∆˚⊢</span>
     <nav>
@@ -55,7 +54,7 @@
   <main id="main-content">
     <section>
       <h2>Srdjan Strbanovic</h2>
-      <h6>Transformational Technology Leader<h6>
+      <h4>Transformational Technology Leader<h4>
       <p>NYC Tri-State Area</p>
     </section>
     
@@ -70,7 +69,7 @@
         <li>CTO</li>
         <li><a class="link" href="https://fadv.com" target="_blank" rel="noopener noreferrer">@First Advantage</a></li>
         <li><a class="link" href="https://klinchit.app" target="_blank" rel="noopener noreferrer">@KlinchIt.app</a></li>
-        <li><a class="link" href="https://lifion.com/" target="_blank" rel="noopener noreferrer">@Lifion by ADP</a></li>
+        <li><a class="link" href="https://www.adp.com/what-we-offer/products/lyric.aspx" target="_blank" rel="noopener noreferrer">@Lyric by ADP</a></li>
         <li><a class="link" href="https://www.thoughtworks.com/" target="_blank" rel="noopener noreferrer">@ThoughtWorks</a></li>
         <li><a class="link" href="https://www.cignium.com/" target="_blank" rel="noopener noreferrer">@Cignium</a></li>
       </ul>
@@ -82,7 +81,7 @@
       <a class="link" href="https://github.com/srdjan" target="_blank" rel="noopener noreferrer"> @GitHub</a>
       <a class="link" href="https://www.linkedin.com/in/ssrdjan/" target="_blank" rel="noopener noreferrer"> @LinkedIn</a>
       <a class="link" href="https://x.com/djidja8" target="_blank" rel="noopener noreferrer"> @Twitter</a>
-      <a class="link" href="https://blogo.timok.deno.net" target="_blank" rel="noopener noreferrer"> @MyBlog</a>
+      <a class="link" href="https://blogo.timok.com" target="_blank" rel="noopener noreferrer"> @MyBlog</a>
     </section>
   </main>
   
