--- a/index.html
+++ b/index.html
@@ -51,40 +51,35 @@
     </nav>
   </header>
 
-  <main id="main-content">
-    <section>
-      <h2>Srdjan Strbanovic</h2>
-      <h4>Transformational Technology Leader<h4>
-      <p>NYC Tri-State Area</p>
-    </section>
-    
-    <p><sup>___</sup></p>
-
-    <section>
-      <ul>
-        <li>SVP Architecture</li>
-        <li>Co-Founder/CTO</li>
-        <li>Chief Architect</li>
-        <li>Principal Architect</li>
-        <li>CTO</li>
-        <li><a class="link" href="https://fadv.com" target="_blank" rel="noopener noreferrer">@First Advantage</a></li>
-        <li><a class="link" href="https://klinchit.app" target="_blank" rel="noopener noreferrer">@KlinchIt.app</a></li>
-        <li><a class="link" href="https://www.adp.com/what-we-offer/products/lyric.aspx" target="_blank" rel="noopener noreferrer">@Lyric by ADP</a></li>
-        <li><a class="link" href="https://www.thoughtworks.com/" target="_blank" rel="noopener noreferrer">@ThoughtWorks</a></li>
-        <li><a class="link" href="https://www.cignium.com/" target="_blank" rel="noopener noreferrer">@Cignium</a></li>
-      </ul>
-    </section>
-    
-    <p><sup>___</sup></p>
-
-    <section>
-      <a class="link" href="https://github.com/srdjan" target="_blank" rel="noopener noreferrer"> @GitHub</a>
-      <a class="link" href="https://www.linkedin.com/in/ssrdjan/" target="_blank" rel="noopener noreferrer"> @LinkedIn</a>
-      <a class="link" href="https://x.com/djidja8" target="_blank" rel="noopener noreferrer"> @Twitter</a>
-      <a class="link" href="https://blogo.timok.com" target="_blank" rel="noopener noreferrer"> @MyBlog</a>
-    </section>
-  </main>
-  
+  <article>
+    <h2>
+      <span>Srdjan Strbanovic</span></br>
+      <h4>Software Engineer</br>
+      NYC Tri-State Area</h4>
+    </h2>
+  </article>
+  <section>
+    <h4>Portals</h4>
+    <a class="link" href="https://github.com/srdjan">@GitHub</a>&emsp;
+    <a class="link" href="https://www.linkedin.com/in/ssrdjan/">@LinkedIn</a>&emsp;
+    <a class="link" href="https://twitter.com/djidja8">@Twitter</a>&emsp;
+    <a class="link" href="https://blogo.timok.com">@Blog</a>
+  </section>
+  <section>
+    <h4>Work experience</h4>
+    <ul class="inside">
+      <li>SVP Architecture</li>
+      <li>Co-Founder/CTO</li>
+      <li>Chief Architect</li>
+      <li>Principal Architect</li>
+      <li>CTO</li>
+      <li><a class="link" href="https://fadv.com">@First Advantage</a></li>
+      <li><a class="link" href="https://klinchit.app">@KlinchIt.app</a></li>
+      <li><a class="link" href="https://lifion.com/">@Lifion by ADP</a></li>
+      <li><a class="link" href="https://www.thoughtworks.com/">@ThoughtWorks</a></li>
+      <li><a class="link" href="https://www.cignium.com/">@Cignium</a></li>
+    </ul>
+  </section>
   <footer>⊣⊢</footer>
 
   <script type="module" src="./header.js"></script>
